добавил картинку к курсу
