# backend/src/config/swagger-config.json
@@ -447,195 +447,164 @@
       },
       "/courses/create": {
         "post": {
-            "description": "",
-            "tags": ["Courses"],
-            "parameters": [
+          "summary": "Создание курса с изображением",
+          "tags": ["Courses"],
+          "consumes": ["multipart/form-data"],
+          "parameters": [
             {
-                "name": "Authorization",
-                "in": "header",
-                "type": "string"
+              "name": "Authorization",
+              "in": "header",
+              "type": "string",
+              "required": true
             },
             {
-                "name": "body",
-                "in": "body",
-                "schema": {
-                "type": "object",
-                "properties": {
-                    "title": {
-                    "example": "any"
-                    },
-                    "description": {
-                    "example": "any"
-                    },
-                    "category": {
-                    "example": "any"
-                    }
-                }
-                }
-            }
-            ],
-            "responses": {
-            "201": {
-                "description": "Created"
+              "name": "title",
+              "in": "formData",
+              "type": "string",
+              "required": true
             },
-            "401": {
-                "description": "Unauthorized"
+            {
+              "name": "description",
+              "in": "formData",
+              "type": "string",
+              "required": false
             },
-            "403": {
-                "description": "Forbidden"
+            {
+              "name": "category",
+              "in": "formData",
+              "type": "string",
+              "required": false
             },
-            "500": {
-                "description": "Internal Server Error"
+            {
+              "name": "image",
+              "in": "formData",
+              "type": "file",
+              "required": false,
+              "description": "Фоновое изображение курса"
             }
-            }
+          ],
+          "responses": {
+            "201": { "description": "Created" },
+            "401": { "description": "Unauthorized" },
+            "403": { "description": "Forbidden" },
+            "500": { "description": "Internal Server Error" }
+          }
         }
       },
       "/courses/": {
         "get": {
-            "description": "",
-            "tags": ["Courses"],
-            "parameters": [
+          "tags": ["Courses"],
+          "description": "Получить список всех курсов",
+          "parameters": [
             {
-                "name": "Authorization",
-                "in": "header",
-                "type": "string"
+              "name": "Authorization",
+              "in": "header",
+              "type": "string"
             }
-            ],
-            "responses": {
-            "200": {
-                "description": "OK"
-            },
-            "401": {
-                "description": "Unauthorized"
-            },
-            "403": {
-                "description": "Forbidden"
-            },
-            "500": {
-                "description": "Internal Server Error"
-            }
-            }
+          ],
+          "responses": {
+            "200": { "description": "OK" },
+            "401": { "description": "Unauthorized" },
+            "403": { "description": "Forbidden" },
+            "500": { "description": "Internal Server Error" }
+          }
         }
       },
       "/courses/{id}": {
         "get": {
-            "description": "",
-            "tags": ["Courses"],
-            "parameters": [
+          "tags": ["Courses"],
+          "description": "Получить курс по ID",
+          "parameters": [
             {
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "type": "string"
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "string"
             },
             {
-                "name": "Authorization",
-                "in": "header",
-                "type": "string"
+              "name": "Authorization",
+              "in": "header",
+              "type": "string"
             }
-            ],
-            "responses": {
-            "200": {
-                "description": "OK"
-            },
-            "401": {
-                "description": "Unauthorized"
-            },
-            "403": {
-                "description": "Forbidden"
-            },
-            "404": {
-                "description": "Not Found"
-            },
-            "500": {
-                "description": "Internal Server Error"
-            }
-            }
+          ],
+          "responses": {
+            "200": { "description": "OK" },
+            "401": { "description": "Unauthorized" },
+            "403": { "description": "Forbidden" },
+            "404": { "description": "Not Found" },
+            "500": { "description": "Internal Server Error" }
+          }
         },
         "put": {
-            "description": "",
-            "tags": ["Courses"],
-            "parameters": [
+          "summary": "Обновление курса и изображения",
+          "tags": ["Courses"],
+          "consumes": ["multipart/form-data"],
+          "parameters": [
             {
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "type": "string"
-            },
-            {
-                "name": "Authorization",
-                "in": "header",
-                "type": "string"
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "string"
             },
             {
-                "name": "body",
-                "in": "body",
-                "schema": {
-                "type": "object",
-                "properties": {
-                    "title": {
-                    "example": "any"
-                    },
-                    "description": {
-                    "example": "any"
-                    },
-                    "category": {
-                    "example": "any"
-                    }
-                }
-                }
+              "name": "Authorization",
+              "in": "header",
+              "type": "string",
+              "required": true
+            },
+            {
+              "name": "title",
+              "in": "formData",
+              "type": "string"
+            },
+            {
+              "name": "description",
+              "in": "formData",
+              "type": "string"
+            },
+            {
+              "name": "category",
+              "in": "formData",
+              "type": "string"
+            },
+            {
+              "name": "image",
+              "in": "formData",
+              "type": "file",
+              "required": false,
+              "description": "Новое фоновое изображение"
             }
-            ],
-            "responses": {
-            "200": {
-                "description": "OK"
-            },
-            "401": {
-                "description": "Unauthorized"
-            },
-            "403": {
-                "description": "Forbidden"
-            },
-            "404": {
-                "description": "Not Found"
-            },
-            "500": {
-                "description": "Internal Server Error"
-            }
-            }
+          ],
+          "responses": {
+            "200": { "description": "OK" },
+            "401": { "description": "Unauthorized" },
+            "403": { "description": "Forbidden" },
+            "404": { "description": "Not Found" },
+            "500": { "description": "Internal Server Error" }
+          }
         },
         "delete": {
-            "description": "",
-            "tags": ["Courses"],
-            "parameters": [
+          "tags": ["Courses"],
+          "description": "Удалить курс",
+          "parameters": [
             {
-                "name": "id",
-                "in": "path",
-                "required": true,
-                "type": "string"
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "string"
             },
             {
-                "name": "Authorization",
-                "in": "header",
-                "type": "string"
+              "name": "Authorization",
+              "in": "header",
+              "type": "string"
             }
-            ],
-            "responses": {
-            "200": {
-                "description": "OK"
-            },
-            "401": {
-                "description": "Unauthorized"
-            },
-            "403": {
-                "description": "Forbidden"
-            },
-            "404": {
-                "description": "Not Found"
-            },
-            "500": {
-                "description": "Internal Server Error"
-            }
+          ],
+          "responses": {
+            "200": { "description": "OK" },
+            "401": { "description": "Unauthorized" },
+            "403": { "description": "Forbidden" },
+            "404": { "description": "Not Found" },
+            "500": { "description": "Internal Server Error" }
           }
         }
       }
